[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videogames_utils"
version = "0.1.0"
description = "Utilities for CNeuroMod videogame data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CNeuroMod" }]
dependencies = [
    "stable-retro",
    "numpy",
    "Pillow",
    "moviepy",
    "opencv-python",
    "PyQt6",
    "pyqtgraph",
    "pandas",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vg-visualizer = "videogames_utils.gui:main"
